@startuml Adapter Pattern

title 适配器模式 - 绘图系统

interface Shape {
    + draw(): void
}

class Circle {
    + draw(): void
}

class Rectangle {
    + draw(): void
}

class Line {
    + draw(): void
}

class Angle {
    + drawAngle(): void
}

class AngleAdapter {
    - angle: Angle
    + AngleAdapter(angle: Angle)
    + draw(): void
}

class ShapeSystem {
    + drawShapes(shapes: List<Shape>): void
}

Shape <|.. Circle
Shape <|.. Rectangle
Shape <|.. Line
Shape <|.. AngleAdapter

AngleAdapter o-- Angle
ShapeSystem ..> Shape : uses

note right of AngleAdapter::draw
  适配器将 draw() 
  转换为 drawAngle()
end note

@enduml
